<resources>
    <string name="app_name">DailyLoss</string>
    <string name="zero">0</string>
    <string name="zero2">0000</string>
    <string name="zero3">0.0</string>
    <string name="zero4">00</string>
    <string name="zero5">000</string>
    <string name="zero6">00%</string>
    <string name="main_page_1">Welcome!</string>
    <string name="main_page_2">Name</string>
    <string name="main_page_3">Subname</string>
    <string name="main_page_4">Summary</string>
    <string name="main_page_5">Facts</string>
    <string name="main_page_6">Consumed Today</string>
    <string name="main_page_7">Eaten</string>
    <string name="main_page_8">Remaining</string>
    <string name="main_page_9">Burned</string>
    <string name="main_page_10">Protein</string>
    <string name="main_page_11">Carbs</string>
    <string name="main_page_12">Fats</string>
    <string name="main_page_13">g</string>
    <string name="main_page_14">Add Meal</string>
    <string name="main_page_15">Add Workout</string>
    <string name="main_page_16">Water Intakes</string>
    <string name="main_page_17">/</string>
    <string name="main_page_18">ml</string>
    <string name="profile_page_1">Profile</string>
    <string name="profile_page_2">Save</string>
    <string name="profile_page_3">Age</string>
    <string name="profile_page_4">Gender</string>
    <string name="profile_page_5">Height</string>
    <string name="profile_page_6">cm</string>
    <string name="profile_page_7">Weight</string>
    <string name="profile_page_8">kg</string>
    <string name="profile_page_9">What\'s your Activity level</string>
    <string name="profile_page_10">What\'s your Goal</string>
    <string name="profile_page_11">BMR</string>
    <string name="profile_page_12">Calories/day</string>
    <string name="profile_page_13">BMI</string>
    <string name="profile_page_14">kg/m^2</string>
    <string name="profile_page_15">TDEE</string>
    <string name="profile_page_16">RMR</string>
    <string name="profile_page_17">IBW</string>
    <string name="profile_page_18">kg</string>
    <string name="profile_page_19">LBW</string>
    <string name="profile_page_20">DWI</string>
    <string name="profile_page_21">ml/day</string>
    <string name="profile_page_22">BFP</string>
    <string name="profile_page_23">percent</string>
    <string name="profile_page_24">Your Body Stats</string>
    <string name="profile_page_25">Macronutrients</string>
    <string name="profile_page_26">If you know your lean body mass [%] (optional)</string>
    <string name="stats_definition">Definition</string>
    <string name="stats_formula">Different Formulas</string>
    <string name="bmr_page_1">Basal Metabloic Rate</string>
    <string name="bmr_page_2">BMR stands for basal metabolic rate, which is the amount of energy that a person\'s body needs to carry out basic functions while at rest, such as breahting, circulating blood and maintaining body temperature.</string>
    <string name="bmr_page_3">Harris-Benedict</string>
    <string name="bmr_page_4">Katch-MacArdle</string>
    <string name="bmr_page_5">Oxford Equation</string>
    <string name="bmi_page_1">Body Mass Index</string>
    <string name="bmi_page_2">BMI stands for Body Mass Index, which is a measurement of body fat based on an individual\'s height and weight. It is calculated by dividing a person\'s weight in kilograms by the square of their height in meters</string>
    <string name="bmi_page_3">Quetelet\'s Formula</string>
    <string name="bmi_page_4">Values</string>
    <string name="bmi_page_5">Classification</string>
    <string name="bmi_page_6">Under Weight</string>
    <string name="bmi_page_7">Normal Weight</string>
    <string name="bmi_page_8">Over Weight</string>
    <string name="bmi_page_9">Obese Class</string>
    <string name="tdee_page_1">Total Daily Energy Expenditure</string>
    <string name="tdee_page_2">TDEE stands for Total Daliy Energy Expenditure. It is the total number of calories that an individual burns in a day, taking into account their basal metabloic rate (BMR), physical activity level and the thermic effect of food (TEF).</string>
    <string name="tdee_page_3">BMR</string>
    <string name="tdee_page_4">RMR</string>
    <string name="rmr_page_1">Resting Metabolic Rate</string>
    <string name="rmr_page_2">BMR stands for basal metabolic rate, which is the amount of energy that a person\'s body needs to carry out basic functions while at rest, such as breahting, circulating blood and maintaining body temperature, similar to BMR.</string>
    <string name="rmr_page_3">Mifflin-St. Jeor</string>
    <string name="rmr_page_4">Cunningham</string>
    <string name="ibw_page_1">Ideal Body Weight</string>
    <string name="ibw_page_2">Ideal Body Weight (IBW) is a calculated estimate of what a person\'s weight should be based on their height, age, and gender. It\'s used as a general guidline for evaluating a person\'s health status and helpful in determining appropriate loss or weight gain goals.</string>
    <string name="ibw_page_3">Hamwi Method</string>
    <string name="ibw_page_4">Devine Formula</string>
    <string name="lbw_page_1">Lean Body Weight</string>
    <string name="lbw_page_2">Lean Body Weight (LBW) is the weight of a person\'s body that is composed of non-fat tissues, including muscles, bones, organs and connective tissu. LBm is an important component of body composition analysis, as it provides insight into a person\'s overall health and fitnes level.</string>
    <string name="lbw_page_3">Boer Equation</string>
    <string name="lbw_page_4">James Formula</string>
    <string name="lbw_page_5">Hume Equation</string>
    <string name="lbw_page_6">Body Fat Percentage</string>
    <string name="dwi_page_1">Daily Water Intake</string>
    <string name="dwi_page_2">Daily Water Intake (DWI) refers to the amount of water an individual consumes each day to maintain bodily functions such as hydration, nutrient transport, digestion, temperature regulation, and joint lubrication. The required intake varies based on age, gender, activity level, climate, diet, health status, and whether a person is pregnant or breastfeeding.</string>
    <string name="dwi_page_3">Weight Formula</string>
    <string name="dwi_page_4">Calories Formula</string>
    <string name="dwi_page_5">IOM Formula</string>
    <string name="dwi_page_6">Activity Formula</string>
    <string name="bfp_page_1">Body Fat Percentage</string>
    <string name="bfp_page_2">Body Fat Percentage (BFP) is the proportion of a person\'s total body weight that is made up of fat. It\'s an important indicator of overall health and fitnes, as having too much body fat has been linked to an incresed risk of chronic diseases such as herst disease, diabetes and some type of cancer</string>
    <string name="bfp_page_3">Deurenberg Formula</string>
    <string name="bfp_page_4">LBW</string>
    <string name="macro_page_1">Daily Intake of Calories</string>
    <string name="macro_page_2">Diet Type</string>
    <string name="macro_page_3">Standard</string>
    <string name="macro_page_4">Balanced</string>
    <string name="macro_page_5">Low Fat</string>
    <string name="macro_page_6">High in protein</string>
    <string name="macro_page_7">Custom</string>
    <string name="macro_page_8">Macronutrients Distribution</string>
    <string name="macro_page_9">kcal</string>
    <string name="daily_meal_page_1">Consumed today</string>
    <string name="daily_meal_page_2">kcal</string>
    <string name="daily_meal_page_3">Breakfast</string>
    <string name="daily_meal_page_4">Lunch</string>
    <string name="daily_meal_page_5">Snack</string>
    <string name="daily_meal_page_6">Dinner</string>
    <string name="daily_meal_page_7">Add Meal</string>
    <string name="daily_meal_page_8">Total Breakfast</string>
    <string name="daily_meal_page_9">Total Lunch</string>
    <string name="daily_meal_page_10">Total Snack</string>
    <string name="daily_meal_page_11">Total Dinner</string>
    <string name="item_meal_1">Calories</string>
    <string name="item_meal_2">+ Add Meal</string>
    <string name="add_product_page_1">Create Food</string>
    <string name="add_product_page_2">Create</string>
    <string name="add_product_page_3">Food Name</string>
    <string name="add_product_page_4">Food Image</string>
    <string name="add_product_page_5">+ Upload</string>
    <string name="add_product_page_6">Brand</string>
    <string name="add_product_page_7">Type</string>
    <string name="add_product_page_8">How much does 100 ml of liquid weight? [g]</string>
    <string name="add_product_page_9">Nutrition Facts</string>
    <string name="add_product_page_10">Amount Per 100g</string>
    <string name="add_product_page_11">Required</string>
    <string name="add_product_page_12">Optional</string>
    <string name="add_product_page_13">Calories [kcal]</string>
    <string name="add_product_page_14">Total Fat [g]</string>
    <string name="add_product_page_15">Saturated Fat [g]</string>
    <string name="add_product_page_16">Trans Fat [g]</string>
    <string name="add_product_page_17">Polyunsaturtared Fat [g]</string>
    <string name="add_product_page_18">Monounsaturated Fat [g]</string>
    <string name="add_product_page_19">Protein [g]</string>
    <string name="add_product_page_20">Carbs [g]</string>
    <string name="add_product_page_21">Dietary Fiber [g]</string>
    <string name="add_product_page_22">Sugars [g]</string>
    <string name="add_product_page_23">Vitamins</string>
    <string name="add_product_page_24">Vitamin K [g]</string>
    <string name="add_product_page_25">Vitamin E [g]</string>
    <string name="add_product_page_26">Vitamin D [g]</string>
    <string name="add_product_page_27">Vitamin C [g]</string>
    <string name="add_product_page_28">Vitamin A [g]</string>
    <string name="add_product_page_29">Vitamin B6 [g]</string>
    <string name="add_product_page_30">Folic Acid [g]</string>
    <string name="add_product_page_31">Minerals</string>
    <string name="add_product_page_32">Zinc [g]</string>
    <string name="add_product_page_33">Copper [g]</string>
    <string name="add_product_page_34">Magnesium [g]</string>
    <string name="add_product_page_35">Manganese [g]</string>
    <string name="add_product_page_36">Phosphorus [g]</string>
    <string name="add_product_page_37">Selenium [ug]</string>
    <string name="add_product_page_38">Sodium [g]</string>
    <string name="add_product_page_39">Calcium [g]</string>
    <string name="add_product_page_40">Iron [g]</string>
    <string name="add_product_page_41">Potassium [g]</string>
    <string name="add_product_page_42">Other</string>
    <string name="add_product_page_43">Cholesterol [g]</string>
    <string name="add_product_page_44">Caffeine [g]</string>
    <string name="add_product_page_45">Water [g]</string>
    <string name="add_product_page_46">Change</string>
    <string name="add_product_page_47">Successfully added!</string>
    <string name="add_product_page_48">Salt [g]</string>
    <string name="add_product_page_49">Amount Per Serving</string>
    <string name="add_product_page_50">Amount Per 100ml</string>
    <string name="add_product_check_page_1">Nutrition Facts</string>
    <string name="add_product_check_page_2">Serving Size [g]</string>
    <string name="add_product_check_page_3">Delete product</string>
    <string name="search_product_page_1">Search Food</string>
    <string name="search_product_page_2">Add</string>
    <string name="search_product_page_3">Apple, Oats, Tuna</string>
    <string name="search_product_page_4">Quick Add</string>
    <string-array name="activity">
        <item>Sedentary Life Style</item>
        <item>Light Exercise</item>
        <item>Moderate Exercise</item>
        <item>Hard Exercise</item>
        <item>Physical Job</item>
    </string-array>
    <string-array name="product_type">
        <item>Solid</item>
        <item>Liquid</item>
    </string-array>
</resources>