<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Stats_BMR">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="10dp"
            android:paddingBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lbw_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/quicksand2"
                android:text="@string/lbw_page_1"
                android:textColor="@color/LBW"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/lbw_definitionTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/quicksand2"
                android:text="@string/stats_definition"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbw_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lbw_definitionLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:layout_marginHorizontal="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbw_definitionTitle">

                <TextView
                    android:id="@+id/lbw_definition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:paddingHorizontal="10dp"
                    android:fontFamily="@font/quicksand2"
                    android:text="@string/lbw_page_2"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/lbw_formulasTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/quicksand2"
                android:text="@string/stats_formula"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbw_definitionLayout" />

            <HorizontalScrollView
                android:id="@+id/lbw_formulasLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/input_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbw_formulasTitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="5dp"
                    android:layout_marginVertical="10dp"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/lbw_formula_1"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/formulas_lbw"
                        android:fontFamily="@font/quicksand2"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/lbw_page_3"
                        android:textColor="@color/formula_text"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/lbw_formula_2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/lbw_formula_2"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/formulas_lbw"
                        android:fontFamily="@font/quicksand2"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/lbw_page_4"
                        android:textColor="@color/formula_text"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/lbw_formula_3"
                        app:layout_constraintStart_toEndOf="@id/lbw_formula_1"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/lbw_formula_3"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/formulas_lbw"
                        android:fontFamily="@font/quicksand2"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/lbw_page_5"
                        android:textColor="@color/formula_text"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/lbw_formula_4"
                        app:layout_constraintStart_toEndOf="@id/lbw_formula_2"
                        app:layout_constraintTop_toTopOf="parent" />

                    <Button
                        android:id="@+id/lbw_formula_4"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/formulas_lbw"
                        android:fontFamily="@font/quicksand2"
                        android:textAllCaps="false"
                        android:gravity="center"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="@string/lbw_page_6"
                        android:textColor="@color/formula_text"
                        android:textSize="13sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/lbw_formula_3"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </HorizontalScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lbw_valueLayouts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input_text"
                android:layout_marginHorizontal="5dp"
                android:paddingVertical="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lbw_formulasLayout">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lbw_titleLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@+id/lbw_valueLayout"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <ImageView
                        android:id="@+id/lbw_image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="10dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:src="@drawable/arm_muscle"/>

                    <TextView
                        android:id="@+id/lbw_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/lbw_image"
                        app:layout_constraintTop_toTopOf="@+id/lbw_image"
                        app:layout_constraintBottom_toBottomOf="@+id/lbw_image"
                        android:layout_marginStart="7dp"
                        android:text="@string/profile_page_19"
                        android:fontFamily="@font/quicksand2"
                        android:textColor="@color/LBW"
                        android:textSize="14sp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/lbw_valueLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/lbw_titleLayout"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                    <TextView
                        android:id="@+id/lbw_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/quicksand2"
                        android:text="@string/zero2"
                        android:textColor="@color/LBW"
                        android:textSize="26sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/lbw_uint"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/lbw_uint"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/quicksand2"
                        android:text="@string/profile_page_18"
                        android:textColor="@color/LBW"
                        android:textSize="12sp"
                        app:layout_constraintStart_toEndOf="@+id/lbw_value"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>